Colab을 통해 생성됨

--- a/1st_place_HMS_inference_code_필사_중.ipynb
+++ b/1st_place_HMS_inference_code_필사_중.ipynb
@@ -7,7 +7,7 @@
       "machine_shape": "hm",
       "gpuType": "L4",
       "mount_file_id": "1On5JlK18SBMW0vkOqpu3hTx0tr2txYv0",
-      "authorship_tag": "ABX9TyPX8CyRpkZWH6B3Z3XxpAJu",
+      "authorship_tag": "ABX9TyMaXDh7efxr7erlH+lf9bC2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -331,12 +331,101 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class CFG:\n",
+        "    debug = False\n",
+        "\n",
+        "    seed = 42\n",
+        "    gpu_idx = 0\n",
+        "\n",
+        "    device = torch.device(f\"cuda:{gpu_idx}\")\n",
+        "\n",
+        "    classes = [\"seizure_vote\", \"lpd_vote\", \"gpd_vote\", \"lrda_vote\", \"grda_vote\", \"other_vote\"]\n",
+        "    n_classes = len(classes)\n",
+        "\n",
+        "    n_folds = 5\n",
+        "\n",
+        "    ## Dataset Preprocessing\n",
+        "    bandpass_filter = {\"low\": 0.5, \"high\": 20, \"order\": 2}\n",
+        "    rand_filter = {\"probab\": 0.1, \"low\": 10, \"high\": 20, \"band\": 1.0, \"order\": 2}\n",
+        "    freq_channels = [(0.5, 4.5)]\n",
+        "    filter_order = 2\n",
+        "    random_close_zone = 0.0  # 0.2\n",
+        "\n",
+        "    map_features = [\n",
+        "        (\"Fp1\", \"F7\"),\n",
+        "        (\"F7\", \"T3\"),\n",
+        "        (\"T3\", \"T5\"),\n",
+        "        (\"T5\", \"O1\"),\n",
+        "        (\"Fp1\", \"F3\"),\n",
+        "        (\"F3\", \"C3\"),\n",
+        "        (\"C3\", \"P3\"),\n",
+        "        (\"P3\", \"O1\"),\n",
+        "        (\"Fp2\", \"F8\"),\n",
+        "        (\"F8\", \"T4\"),\n",
+        "        (\"T4\", \"T6\"),\n",
+        "        (\"T6\", \"O2\"),\n",
+        "        (\"Fp2\", \"F4\"),\n",
+        "        (\"F4\", \"C4\"),\n",
+        "        (\"C4\", \"P4\"),\n",
+        "        (\"P4\", \"O2\"),\n",
+        "        (\"Fz\", \"Cz\"),\n",
+        "        (\"Cz\", \"Pz\")\n",
+        "    ]\n",
+        "\n",
+        "    eeg_features = [\"Fp1\",\"F3\",\"C3\",\"P3\",\"F7\",\"T3\",\"T5\",\"O1\",\"Fz\",\"Cz\",\"Pz\",\"Fp2\",\"F4\",\"C4\",\"P4\",\"F8\",\"T4\",\"T6\",\"O2\",\"EKG\"]\n",
+        "    #eeg_features = [\"Fp1\", \"T3\", \"C3\", \"O1\", \"Fp2\", \"C4\", \"T4\", \"O2\"]\n",
+        "    feature_to_index = {x: y for x, y in zip(eeg_features, range(len(eeg_features)))}\n",
+        "    simple_features = []  # 'Fz', 'Cz', 'Pz', 'EKG'\n",
+        "\n",
+        "    n_map_features = len(map_features)\n",
+        "    in_channels = n_map_features + n_map_features * len(freq_channels) + len(simple_features)\n",
+        "\n",
+        "    seq_length = 50  # Second's\n",
+        "    sampling_rate = 200  # Hz\n",
+        "    nsamples = seq_length * sampling_rate\n",
+        "    out_samples = nsamples // 5\n",
+        "\n",
+        "    input_size = 512\n",
+        "    in_chans = 1\n",
+        "\n",
+        "    batch_size = 64\n",
+        "    num_workers = 4"
+      ],
       "metadata": {
         "id": "SVhG1fCas12T"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.\tBandpass Filter (대역 통과 필터)\n",
+        "\t•\t설정: 저주파 0.5 Hz, 고주파 20 Hz, 필터 차수 2\n",
+        "\t•\t이유: EEG 신호는 주로 0.5 Hz에서 20 Hz 사이의 주파수 대역에서 중요한 정보를 가집니다. 이 대역 외의 주파수는 주로 노이즈나 불필요한 신호로 간주됩니다. 따라서, 대역 통과 필터를 사용하여 이 범위의 주파수만 통과시키고 나머지는 제거합니다. 필터 차수 2는 적절한 필터링 효과를 제공하면서 신호의 왜곡을 최소화합니다.\n",
+        "\t2.\tRand Filter (랜덤 필터)\n",
+        "\t•\t설정: 확률 0.1, 저주파 10 Hz, 고주파 20 Hz, 대역폭 1.0 Hz, 필터 차수 2\n",
+        "\t•\t이유: 랜덤 필터는 데이터 증강(augmentation) 기법의 일환으로 사용됩니다. 일정 확률(여기서는 0.1)로 신호에 추가적인 필터링을 적용함으로써, 모델이 다양한 신호 변형에 대해 더 잘 일반화(generalize)할 수 있도록 돕습니다. 저주파 10 Hz에서 고주파 20 Hz까지의 랜덤 필터링은 고주파 노이즈나 변형에 대한 모델의 견고성을 높이는 데 도움이 됩니다.\n",
+        "\t3.\tFreq Channels (주파수 채널)\n",
+        "\t•\t설정: (0.5, 4.5) Hz\n",
+        "\t•\t이유: 특정 주파수 대역(여기서는 0.5 Hz에서 4.5 Hz)이 중요한 특징을 가질 수 있습니다. 이 주파수 범위는 델타파(Delta wave) 영역으로, 주로 깊은 수면 상태나 특정 뇌 기능과 관련이 있습니다. 이 주파수 대역을 강조하여 모델이 중요한 패턴을 더 잘 학습할 수 있도록 합니다.\n",
+        "\t4.\tFilter Order (필터 차수)\n",
+        "\t•\t설정: 2\n",
+        "\t•\t이유: 필터의 차수는 필터의 급격한 변화를 제어합니다. 차수가 높을수록 필터링이 더 급격하게 이루어지지만, 신호의 위상 왜곡이 커질 수 있습니다. 차수 2는 적절한 균형을 제공하여 신호를 적절히 필터링하면서도 위상 왜곡을 최소화합니다.\n",
+        "\t5.\tRandom Close Zone (랜덤 폐쇄 영역)\n",
+        "\t•\t설정: 0.0 (기본값)\n",
+        "\t•\t이유: 이 설정은 데이터를 증강할 때 사용되는 매개변수로, 신호의 특정 영역을 랜덤하게 닫거나 제거하는 것을 의미합니다. 현재 값이 0.0인 이유는 이 기능을 사용하지 않겠다는 뜻입니다. 특정 상황에서 신호의 일부를 제거함으로써 모델이 결측 데이터를 다루는 능력을 높일 수 있지만, 여기서는 사용하지 않기로 설정되었습니다.\n",
+        "\n",
+        "  참고 논문\n",
+        "\n",
+        "  \t•\t“EEG Preprocessing and Denoising” by SpringerLink\n",
+        "\t  •\t“The PREP pipeline: standardized preprocessing for large-scale EEG analysis” by Frontiers\n",
+        "\t  •\t“Automated EOG Removal from EEG Signal Using Independent Component Analysis and Machine Learning Algorithms” by SpringerLink"
+      ],
+      "metadata": {
+        "id": "BJ-qq6ekBIKd"
+      }
     }
   ]
 }
