Colab을 통해 생성됨

--- a/1st_place_HMS_inference_code_필사_중.ipynb
+++ b/1st_place_HMS_inference_code_필사_중.ipynb
@@ -7,7 +7,7 @@
       "machine_shape": "hm",
       "gpuType": "L4",
       "mount_file_id": "1On5JlK18SBMW0vkOqpu3hTx0tr2txYv0",
-      "authorship_tag": "ABX9TyMaXDh7efxr7erlH+lf9bC2",
+      "authorship_tag": "ABX9TyPMClDmPCe2lIfG9CrUmYYh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -425,6 +425,117 @@
       ],
       "metadata": {
         "id": "BJ-qq6ekBIKd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def quantiaze_data(data,class):\n",
+        "  mu_x = nu_law_encoding(data, classes)\n",
+        "  return mu_x #quantized\n",
+        "\n",
+        "#\t•\t역할: 데이터를 클래스 수(classes)에 맞춰 양자화(quantization)합니다.\n",
+        "# •\t작동 방식: mu_law_encoding 함수를 호출하여 입력 데이터를 양자화합니다.\n",
+        "\n",
+        "def mu_law_encoding(data, classes):\n",
+        "  mu_x = np.sign(data)*np.log(1 + mu * np.abs(data))/ np.log(mu +1)\n",
+        "  return mu_x\n",
+        "\n",
+        "#\t•\t역할: Mu-law 알고리즘을 사용하여 데이터를 인코딩합니다.\n",
+        "#\t•\t작동 방식: 입력 데이터의 부호를 유지하면서 로그 변환을 통해 데이터를 압축합니다. mu는 압축의 정도를 조절하는 파라미터입니다.\n",
+        "\n",
+        "def mu_law_expansion(data, mu):\n",
+        "    s = np.sign(data) * (np.exp(np.abs(data) * np.log(mu + 1)) - 1) / mu\n",
+        "    return s\n",
+        "\n",
+        "#\t•\t역할: Mu-law 인코딩된 데이터를 원래대로 복원합니다.\n",
+        "#\t•\t작동 방식: mu_law_encoding의 반대 작업으로, 로그 변환된 데이터를 지수 함수로 확장하여 원래의 값에 가깝게 복원합니다.\n",
+        "\n",
+        "\n",
+        "def butter_bandpass(lowcut, highcut, fs, order=5):\n",
+        "    return butter(order, [lowcut, highcut], fs=fs, btype=\"band\")\n",
+        "\n",
+        "#\t•\t역할: 대역 통과 필터의 파라미터를 계산합니다.\n",
+        "#\t•\t작동 방식: 저주파수(lowcut)와 고주파수(highcut)를 이용하여 주파수 대역을 설정하고, 필터 차수(order)를 지정하여 Butterworth 필터의 계수를 계산합니다.\n",
+        "\n",
+        "\n",
+        "def butter_bandpass_filter(data, lowcut, highcut, fs, order=5):\n",
+        "    b, a = butter_bandpass(lowcut, highcut, fs, order=order)\n",
+        "    y = lfilter(b, a, data)\n",
+        "    return y\n",
+        "\n",
+        "#\t•\t역할: 입력 데이터에 대역 통과 필터를 적용합니다.\n",
+        "#\t•\t작동 방식: butter_bandpass 함수를 통해 얻은 필터 계수(b, a)를 사용하여 데이터를 필터링합니다.\n",
+        "\n",
+        "\n",
+        "def butter_lowpass_filter(data, cutoff_freq=20, sampling_rate=CFG.sampling_rate, order=4):\n",
+        "    nyquist = 0.5 * sampling_rate\n",
+        "    normal_cutoff = cutoff_freq / nyquist\n",
+        "    b, a = butter(order, normal_cutoff, btype=\"low\", analog=False)\n",
+        "    filtered_data = lfilter(b, a, data, axis=0)\n",
+        "    return filtered_data\n",
+        "\n",
+        "#\t•\t역할: 저주파 통과 필터를 적용합니다.\n",
+        "#\t•\t작동 방식: 나이퀴스트 주파수(nyquist)를 계산하고, 저주파 통과 필터의 계수(b, a)를 계산하여 데이터를 필터링합니다.\n",
+        "\n",
+        "\n",
+        "def denoise_filter(x):\n",
+        "    y = butter_bandpass_filter(x, CFG.lowcut, CFG.highcut, CFG.sampling_rate, order=6)\n",
+        "    y = (y + np.roll(y, -1) + np.roll(y, -2) + np.roll(y, -3)) / 4\n",
+        "    y = y[0:-1:4]\n",
+        "    return y\n",
+        "\n",
+        "#\t•\t역할: 입력 신호의 노이즈를 제거합니다.\n",
+        "#\t•\t작동 방식: butter_bandpass_filter를 통해 신호를 대역 통과 필터링한 후, 신호를 이동 평균하여 노이즈를 줄이고, 샘플링 간격을 줄입니다.\n"
+      ],
+      "metadata": {
+        "id": "nkcCFuKLB7_F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mu-law 인코딩 및 복원 과정은 데이터 압축과 신호 처리에서 자주 사용되는 기법으로, 특히 음성 및 오디오 데이터의 압축에 유용합니다. 이를 이해하기 위해서는 몇 가지 기초적인 정보와 참고 문헌을 읽는 것이 도움이 됩니다.\n",
+        "\n",
+        "Mu-law 인코딩 및 복원\n",
+        "\n",
+        "Mu-law 인코딩은 데이터 압축을 위해 사용되는 비선형 알고리즘입니다. 주로 신호의 동적 범위를 축소하여 낮은 수준의 신호를 강조하는 데 사용됩니다. 이를 통해 신호의 잡음비(Signal-to-Noise Ratio)를 개선하고, 디지털 통신에서의 효율성을 높일 수 있습니다.\n",
+        "\n",
+        "\t•\tMu-law 인코딩: 신호를 비선형적으로 변환하여 압축하는 과정입니다. 작은 신호는 더 큰 비율로 압축되고, 큰 신호는 덜 압축됩니다.\n",
+        "\t•\tMu-law 복원: 인코딩된 신호를 다시 원래의 신호로 되돌리는 과정입니다. 로그 변환된 데이터를 지수 함수로 확장하여 원래 값에 가깝게 복원합니다.\n",
+        "\n",
+        "왜 복원이 필요한가?\n",
+        "\n",
+        "복원 과정은 인코딩된 신호를 다시 원래 신호로 변환하여 신호의 원래 특성을 유지하는 데 중요합니다. 이는 다음과 같은 이유로 중요합니다:\n",
+        "\n",
+        "\t1.\t신호 분석: 원래 신호의 특성을 분석하기 위해서는 복원이 필요합니다.\n",
+        "\t2.\t신호 처리: 인코딩된 신호를 사용하는 동안 발생할 수 있는 왜곡을 최소화하기 위해 복원합니다.\n",
+        "\t3.\t데이터 무결성: 압축된 데이터를 다시 원래 상태로 되돌려 데이터 무결성을 유지합니다.\n",
+        "\n",
+        "추천 읽을 거리\n",
+        "\n",
+        "이해를 돕기 위해 Mu-law 인코딩 및 신호 처리를 다루는 몇 가지 참고 문헌과 자료를 추천합니다:\n",
+        "\n",
+        "\t1.\tDigital Signal Processing (DSP) 기본서:\n",
+        "\t•\t책 제목: “Digital Signal Processing: Principles, Algorithms and Applications” by John G. Proakis and Dimitris G. Manolakis\n",
+        "\t•\t설명: DSP의 기본 개념과 알고리즘을 다루며, Mu-law 인코딩과 같은 압축 기법도 포함합니다.\n",
+        "\t2.\tIEEE 논문:\n",
+        "\t•\t논문 제목: “Companding in Speech and Audio Processing” by A. V. Oppenheim and R. W. Schafer\n",
+        "\t•\t설명: 음성 및 오디오 처리에서의 압축 기법, 특히 Mu-law와 A-law 인코딩에 대해 설명합니다.\n",
+        "\t3.\t온라인 튜토리얼 및 강의:\n",
+        "\t•\t사이트: Coursera\n",
+        "\t•\t강의 제목: “Digital Signal Processing”\n",
+        "\t•\t설명: DSP의 기초부터 고급 개념까지 다루며, 신호 압축 및 복원에 대한 내용도 포함됩니다.\n",
+        "\t4.\t신호 처리 관련 웹사이트:\n",
+        "\t•\t웹사이트: DSPRelated.com\n",
+        "\t•\t설명: 다양한 신호 처리 기술과 알고리즘에 대한 튜토리얼과 포럼을 제공합니다.\n",
+        "\n",
+        "이 자료들을 통해 Mu-law 인코딩 및 복원뿐만 아니라 신호 처리의 다양한 기법을 심도 있게 이해할 수 있을 것입니다."
+      ],
+      "metadata": {
+        "id": "ENaMgQaUYYZt"
       }
     }
   ]
